php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #52826 phpinfo is incorrect for bzip2 stream wrapper
Submitted: 2010-09-13 09:32 UTC Modified: 2010-09-13 09:42 UTC
From: for-bugs at hnw dot jp Assigned: aharvey (profile)
Status: Closed Package: Bzip2 Related
PHP Version: 5.3.3 OS: any
Private report: No CVE-ID: None
 [2010-09-13 09:32 UTC] for-bugs at hnw dot jp
Description:
------------
The bzip2 stream filter 'compress.bzip2://' is introduced by bzip2 extension. However, this extension shows 'compress.bz2://' as own stream filter in phpinfo(), because of typo in ext/bz2/bz2.c:320.

Test script:
---------------
On terminal emulator, type as below:

php -i | grep '^Stream W'

Expected result:
----------------
Stream Wrapper support => compress.bzip2://
Stream Wrapper support => compress.zlib://


Actual result:
--------------
Stream Wrapper support => compress.bz2://
Stream Wrapper support => compress.zlib://


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2010-09-13 09:38 UTC] aharvey@php.net
-Status: Open +Status: Assigned -Assigned To: +Assigned To: aharvey
 [2010-09-13 09:41 UTC] aharvey@php.net
Automatic comment from SVN on behalf of aharvey
Revision: http://svn.php.net/viewvc/?view=revision&revision=303307
Log: Fix bug #52826 (phpinfo is incorrect for bzip2 stream wrapper).
 [2010-09-13 09:42 UTC] aharvey@php.net
-Status: Assigned +Status: Closed
 [2010-09-13 09:42 UTC] aharvey@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Aug 29 21:00:02 2026 UTC