Fix bug #52826 (phpinfo is incorrect for bzip2 stream wrapper).